# mlmorph-spellchecker

./: LICENSE.txt  MANIFEST.in  README.rst  setup.cfg  setup.py
mlmorph_spellchecker/: __init__.py  __main__.py  spellchecker.py  suggestion.py  utils.py
mlmorph_spellchecker/resources/: common_mistakes.csv
mlmorph_spellchecker/strategies/: __init__.py  chillu_normalization.py  chillu_to_virama_form.py  geminate_consonants.py  insert_y_before_kkuka.py  nta_correction.py  phonetic_similarity.py  suggestion_strategy.py
tests/: __init__.py  test_spellchecker.py
