
[metadata]
name = mlmorph_spellchecker
version = 1.0.0.dev8
author = Santhosh Thottingal
author-email = santhosh.thottingal@gmail.com
description = Malayalam morphology analyser based spellchecker
long_description = file: README.rst
keywords = Malayalam morphology FST analyser generator spellchecker
license = MIT
license-file = LICENSE.txt
url = https://gitlab.com/smc/mlmorph-spellchecker
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
packages =
    mlmorph_spellchecker
    mlmorph_spellchecker.strategies

install_requires=
    mlmorph>=1.0.0.dev4
