
[metadata]
name = mlmorph_spellchecker
author = Santhosh Thottingal
author-email = santhosh.thottingal@gmail.com
description = Malayalam morphology analyser based spellchecker
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = Malayalam morphology FST analyser generator spellchecker
license = MIT
license-file = LICENSE.txt
url = https://gitlab.com/smc/mlmorph-spellchecker
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers

[options]
packages =
    mlmorph_spellchecker
    mlmorph_spellchecker.strategies

install_requires=
    mlmorph>=1.2.1

[options.package_data]
*=resources/common_mistakes.csv